# big-data-bowl-2026-analytics

./: .gitignore  README.md  pyproject.toml
data/: scores.csv
docs/: submission.md
notebooks/: bad_fake.ipynb  bad_recovery.ipynb  good_fake.ipynb  good_recovery.ipynb  quadrant.ipynb  routes.ipynb  wide_receivers.ipynb
src/: __init__.py  inference.py  main.py
src/core/: settings.py  teams.py
src/data_processing/: __init__.py
src/data_processing/cleaning/: __init__.py  clean_data.py  players.py  plays.py  tracking.py
src/data_processing/inference/: __init__.py  create_dataset.py
src/data_processing/training/: __init__.py  create_datasets.py  features.py
src/io/: datasets.py
src/metrics/: __init__.py  compute_scores.py  deception.py  recovery.py
src/training/: __init__.py  base.py  evaluate.py  model.py  train.py
src/visualization/: __init__.py  field.py  play.py
tests/test_core/: test_logs.py  test_settings.py
